# lunabotics2022

./: CMakeLists.txt  README.md  arduino_stepper.ino  package.xml  setup.py  test
Aruco_Local/: detect_aruco_video.py  utils.py
LunaboticsRoborioCode/.OutlineViewer/: outlineviewer.json
digbot4/: CMakeLists.txt  luna.rviz  package.xml
digbot4/config/: joint_names_digbot4.yaml
digbot4/launch/: display.launch  gazebo.launch  move_base.launch
digbot4/meshes/: base_link.STL  front_cam.STL  front_cam_mount.STL  front_left_wheel.STL  front_lidar.STL  front_right_wheel.STL  rear_cam.STL  rear_cam_mount.STL  rear_left_wheel.STL  rear_lidar.STL  rear_right_wheel.STL
digbot4/plugins/: lidar.cc  newlidar.cc  rover.cc
digbot4/rviz/: urdf.rviz
digbot4/urdf/: _d435.urdf.xacro  digbot4.csv  digbot4.gazebo.xacro  digbot4.urdf  lidar.xacro
launch/: full_field.launch  lidar_world.launch  maps2.launch  robot_camera.launch  robot_field.launch
lunabotics teleop/: gamepad_outputs.py  gamepad_read.py  halleffect_test.py  joystick1.py  master_program.py  master_program_elijah_refactor.py  may27.py  pwm_test.py  pwm_test2.py  pwm_test3.py  servo_remote_test.py  servo_test.py  tank_drive.py
maps/: NewField.sdf  World_CorrectHeights.world  basic_comp_lane.sdf  newmap.pgm  newmap.yaml  test_world_5.sdf  test_world_6.sdf  test_world_7.sdf  turtlebot_map.world
movement/: lab3_smooth_drive.py  move.launch  path_planner.py
sketches/: laserdistancetest.ino  servotest.ino
teleop/: joy.py  lunaTeleop.launch  teleop_twist_netTable.py
teleop_new/: master_program.py
(+42 files in other folders)
