<package format="2">
  <name>digbot4</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for digbot4</p>
    <p>This package contains configuration data, 3D models and launch files
for digbot4 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <gazebo_ros gazebo_model_path="$(find lunabotics)/digbot4/meshes"/>
    <gazebo_ros gazebo_media_path="$(find lunabotics)/digbot4/meshes"/>
    <architecture_independent />
  </export>
</package>
